--- a/index.html
+++ b/index.html
@@ -4,231 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konversi Volume ke Berat - Beras & Tepung</title>
-    <style>
-        :root {
-            --primary-color: #4a6b57;
-            --secondary-color: #f8f1e9;
-            --accent-color: #e67e22;
-            --text-color: #333;
-            --light-text: #777;
-            --white: #fff;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #f5f5f5;
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 30px;
-            padding: 20px;
-            background-color: var(--primary-color);
-            color: var(--white);
-            border-radius: 10px;
-            box-shadow: var(--shadow);
-        }
-
-        header h1 {
-            font-size: 2.2rem;
-            margin-bottom: 5px;
-        }
-
-        header p {
-            font-size: 1.1rem;
-            opacity: 0.9;
-        }
-
-        .converter-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        .input-section, .result-section {
-            flex: 1;
-            min-width: 300px;
-            background-color: var(--white);
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: var(--shadow);
-        }
-
-        .material-selector, .conversion-direction {
-            display: flex;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-
-        .material-selector button, .conversion-direction button {
-            flex: 1;
-            padding: 10px;
-            border: none;
-            background-color: var(--secondary-color);
-            color: var(--text-color);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .material-selector button.active, .conversion-direction button.active {
-            background-color: var(--primary-color);
-            color: var(--white);
-        }
-
-        .material-selector button:hover, .conversion-direction button:hover {
-            background-color: #d4d4d4;
-        }
-
-        .material-selector button.active:hover, .conversion-direction button.active:hover {
-            background-color: #3a5a47;
-        }
-
-        .input-group {
-            margin-bottom: 20px;
-        }
-
-        .input-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 500;
-        }
-
-        .input-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-
-        button {
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        #convert-btn {
-            background-color: var(--accent-color);
-            color: var(--white);
-            margin-right: 10px;
-        }
-
-        #convert-btn:hover {
-            background-color: #d35400;
-        }
-
-        #reset-btn {
-            background-color: var(--secondary-color);
-            color: var(--text-color);
-        }
-
-        #reset-btn:hover {
-            background-color: #d4d4d4;
-        }
-
-        .result-section h3 {
-            margin-bottom: 15px;
-            color: var(--primary-color);
-            font-size: 1.2rem;
-        }
-
-        .result-box {
-            background-color: var(--secondary-color);
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .result-box span {
-            display: inline-block;
-            vertical-align: middle;
-        }
-
-        #result-value {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: var(--primary-color);
-            margin-right: 5px;
-        }
-
-        #result-unit {
-            font-size: 1.5rem;
-            color: var(--light-text);
-        }
-
-        .info-box {
-            background-color: #e8f4ea;
-            padding: 15px;
-            border-radius: 5px;
-            font-size: 0.9rem;
-        }
-
-        .info-box p:first-child {
-            font-weight: 500;
-            margin-bottom: 5px;
-        }
-
-        .tips-section {
-            background-color: var(--white);
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: var(--shadow);
-        }
-
-        .tips-section h3 {
-            color: var(--primary-color);
-            margin-bottom: 15px;
-            font-size: 1.2rem;
-        }
-
-        .tips-section ul {
-            list-style-position: inside;
-        }
-
-        .tips-section li {
-            margin-bottom: 8px;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px;
-            color: var(--light-text);
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 600px) {
-            .converter-container {
-                flex-direction: column;
-            }
-        
-            header h1 {
-                font-size: 1.8rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -282,7 +58,7 @@
     </div>
     
     <footer>
-        <p>Aplikasi Konversi Volume ke Berat &copy; 2023 - Kelompok X</p>
+        <p>Aplikasi Konversi Volume ke Berat &copy; 2025 - Kelompok 8</p>
     </footer>
 
     <script>
